src/test/ui/union/normalization-failure-issue-81199-min.rs
union PtrRepr<T: ?Sized> {
    const_ptr: *const T,
    mut_ptr: *mut T,
    components: <T as Pointee>::Metadata
    //~^ ERROR the trait bound `T: Pointee` is not satisfied
}

pub trait Pointee {
   type Metadata;
}

fn main() {}
